2007-05-27  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage: 
	* pbuilder-buildpackage-funcs: 
	* pbuilder-createbuildenv: 
	* pbuilder-updatebuildenv: 
	* pbuilder-user-mode-linux: trap sighup as well as exit.

2007-05-17  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: Make some references to 'base
	chroot image tar-ball' to explicitly refer to 'base.tgz'

	* pdebuild.1: 
	* pbuilder.8: 
	* pbuilder-user-mode-linux.1: update documentation.

	* pdebuild-uml-checkparams: use tee for --logfile

	* pdebuild-checkparams: 
	* pbuilder-checkparams: 
	* pbuilder-buildpackage: use tee so that user can see what's being logged.

2007-05-14  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.ja.po: 
	* Documentation/Makefile: start implementing Japanese version of manual

2007-05-10  Junichi Uekawa  <dancer@debian.org>

	* Documentation/debconf7/pbuilder.tex: add references to other works.

	* Documentation/pbuilder-doc.xml: add more explanation about B92test-pkg

2007-05-05  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update and clarify documentation.


2007-04-29  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends-aptitude: Pass --without-recommends to
	aptitude.

2007-04-22  Junichi Uekawa  <dancer@debian.org>

	* examples/execute_installtest.sh: update install test so that it can handle more than one packages.

2007-04-22  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends-aptitude: Pass
	Aptitude::ProblemResolver::StepScore and
	Aptitude::CmdLine::Ignore-Trust-Violations flags to aptitude to
	help resolve complex situations relatively common in experimental and
	support unsigned repositories like we do for apt-get.

2007-04-17  Junichi Uekawa  <dancer@debian.org>

	* debian/rules: remove amd64 from build rules.

	* testsuite/run-test.sh (HOOKOPTION): change upgrade testing
	procedure

2007-04-16  Junichi Uekawa  <dancer@debian.org>
