@@ -1,5 +1,7 @@
 2007-05-27  Junichi Uekawa  <dancer@debian.org>
 
+	* testsuite/run-test.sh: process logs to reduce diff.
+
 	* pbuilder-buildpackage: 
 	* pbuilder-buildpackage-funcs: 
 	* pbuilder-createbuildenv: 
